動きました。

--- a/res/layout/activity_calculator.xml
+++ b/res/layout/activity_calculator.xml
@@ -33,7 +33,8 @@
 
                     <Button
 			            android:id="@+id/keypadCopy"
-			            android:text="Copy" 
+			            android:text="Copy"
+			            android:onClick="functionKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -44,6 +45,7 @@
                     <Button
 			            android:id="@+id/keypadC"
 			            android:text="C" 
+			            android:onClick="functionKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -54,6 +56,7 @@
                    	<Button
 			            android:id="@+id/keypadAC"
 			            android:text="AC" 
+			            android:onClick="functionKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -64,6 +67,7 @@
                    	<Button
 			            android:id="@+id/keypadBS"
 			            android:text="BS" 
+			            android:onClick="functionKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -115,6 +119,7 @@
                    	<Button
 			            android:id="@+id/keypadDiv"
 			            android:text="/" 
+			            android:onClick="opratorKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -164,6 +169,7 @@
                    	<Button
 			            android:id="@+id/keypadMulti"
 			            android:text="*" 
+			            android:onClick="opratorKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -213,6 +219,7 @@
                    	<Button
 			            android:id="@+id/keypadSub"
 			            android:text="-" 
+			            android:onClick="opratorKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -252,7 +259,7 @@
                    	<Button
 			            android:id="@+id/keypadEq"
 			            android:text="=" 
-		             	android:onClick="equalOnClick"
+			            android:onClick="opratorKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
@@ -262,7 +269,7 @@
                    	<Button
 			            android:id="@+id/keypadAdd"
 			            android:text="+" 
-			            android:onClick="addKeyOnClick"
+			            android:onClick="opratorKeyOnClick"
 			            android:padding="0dp"
 						android:textSize="24sp"
 						android:layout_width="wrap_content"
